[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mehori_climate"
version = "0.1.0"
description = "My personal toolkit for climate data analysis."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "xarray",
    "matplotlib",
    "netCDF4",
    "cartopy"
]

[tool.setuptools.packages.find]
where = ["src"]
